--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,80 @@
 #navbar{
   border: 2px solid black;
-  height: 100px;
-  background: pink;
+  height: 65px;
+  font-family: 'IM Fell Great Primer SC', serif;
+  padding-top: 10px;
 }
 
-#jumbotron{
-  border: 2px solid black;
-  height: 400px;
-  background: lightblue;
+img {
+  height: 100%;
+  width: 100%;
+
+  position: absolute;
+  z-index: -2;
+}
+
+.jumbotron{
+  font-family: 'Ovo', serif;
+  background: transparent;
+  color: #fff;
+
+}
+      .jumbotron h1{
+        margin-left: 25%;
+        font-size: 6em;
+        text-shadow: 10px #fff;
+
+      }
+
+      .jumbotron p{
+        margin-left: 32%;
+        margin-top: 5%;
+        font-size: 2em;
+        text-shadow: 10px #fff;
+
+      }
+
+
+
+
+.jumbotron .btn{
+  background-color: blue;
+  opacity: 0.6;
+  margin-left: 8%;
+  transform: rotate(-40deg);
+  border-top-left-radius: 45%;
+    border-bottom-left-radius: 45%;
+    border-bottom-right-radius: 45%;
+  height: 100px;
+}
+
+
+#footer{
+  background: lightgray;
+  font-family: 'IM Fell Great Primer SC', serif;
+  height: 175px;
+  margin-top: 120px;
 }
 
 #icon{
   border: 2px solid black;
-  height: 100px;
-  background: limegreen;
-}
+  height: 175px;
+
+  }
+    #Facebook{
+      height: 50px;
+      color: blue;
+    }
 
   #contact{
     border: 2px solid black;
-    height: 100px;
-    background: limegreen;
+    height: 175px;
+
+
   }
 
   #map{
     border: 2px solid black;
-    height: 100px;
-    background: limegreen;
+    height: 175px;
+
   }
