--- a/css/main.css
+++ b/css/main.css
@@ -3,68 +3,96 @@
   color: #fff;
 }
 
+.navbar-default {
+  border: none;
+}
+
+.navbar-default .navbar-collapse{
+  background-color: #cbd8e3;
+  border: none;
+}
+
 
 #navbar{
-  border: 2px solid black;
+  border: none;
   height: 65px;
   font-family: 'IM Fell Great Primer SC', serif;
   padding-top: 10px;
+  }
+
+/*CAROUSEL BEGINS*/
+
+.item{
+  height: 500px;
+  background-position: center;
+  background-size: cover;
 }
 
-.jumbotron {
-    margin-bottom: 0px;
-    background-image: url(../img/pexels-umbrellaphoto-large.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: white;
-    text-shadow: black 0.3em 0.3em 0.3em;
+.carousel-font{
+  font-size: 4em;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
+}
+
+.carousel-caption a {
+  color: #fff;
+}
+
+.carousel-caption a:hover{
+  color: #4c433a;
+  text-shadow: 3px 3px 0.5px rgba(56, 29, 2);
+  text-decoration: none;
 
 }
 
-      .jumbotron h1{
-        margin-left: 25%;
-        font-size: 6em;
-        text-shadow: 0.8em rgba(0, 0, 0, 0.5);
-
-      }
-
-      .jumbotron p{
-        font-family: 'Ovo', serif;
-        color: #fff;
-        margin-left: 32%;
-        margin-top: 5%;
-        font-size: 2em;
-        text-shadow:0.8em rgba(0, 0, 0, 0.5);
-
-      }
+#welcome-image{
+  background-image: url(../img/pexels-umbrellaphoto-large.jpg);
 
 
-
-
-.jumbotron .btn{
-
-  background-color: blue;
-  opacity: 0.8;
-;
 }
+
+#cello-site{
+  background-image: url(../img/pexels-cellist.jpeg);
+
+}
+
+#travel-site{
+  background-image: url(../img/pexels-photo.jpg);
+
+}
+
+/*CAROUSEL ENDS*/
 
 
 #footer{
-  background: lightgray;
+  background: #cbd8e3;
   font-family: 'IM Fell Great Primer SC', serif;
   height: 175px;
-  margin-top: 120px;
+  margin-top: -1px;
 }
 
 #icon{
   border: 2px solid black;
   height: 175px;
+  text-align: center;
+  padding-top: 40px;
+  }
+
+  .fa-facebook-square:before, .fa-linkedin:before{
+    font-size: 4em;
+    text-shadow: 0.75px 0.75px 1px rgba(255, 255, 255, 0.8);
+    padding-left: 10px;
+
 
   }
-    #Facebook{
-      height: 50px;
-      color: blue;
-    }
+
+  .fa-facebook-square:before{
+    color: #3B5998;
+  }
+
+  .fa-linkedin:before{
+    color: #0177B5;
+  }
+
 
   #contact{
     border: 2px solid black;
