--- a/css/main.css
+++ b/css/main.css
@@ -1,70 +1,98 @@
+.ovo-font-white{
+  font-family: 'Ovo', serif;
+  color: #fff;
+}
+
+.navbar-default {
+  border: none;
+}
+
+.navbar-default .navbar-collapse{
+  background-color: #cbd8e3;
+  border: none;
+}
+
+
 #navbar{
-  border: 2px solid black;
+  border: none;
   height: 65px;
   font-family: 'IM Fell Great Primer SC', serif;
   padding-top: 10px;
+  }
+
+/*CAROUSEL BEGINS*/
+
+.item{
+  height: 500px;
+  background-position: center;
+  background-size: cover;
 }
 
-img {
-  height: 100%;
-  width: 100%;
-
-  position: absolute;
-  z-index: -2;
+.carousel-font{
+  font-size: 4em;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
 }
 
-.jumbotron{
-  font-family: 'Ovo', serif;
-  background: transparent;
+.carousel-caption a {
   color: #fff;
+}
+
+.carousel-caption a:hover{
+  color: #4c433a;
+  text-shadow: 3px 3px 0.5px rgba(56, 29, 2);
+  text-decoration: none;
 
 }
-      .jumbotron h1{
-        margin-left: 25%;
-        font-size: 6em;
-        text-shadow: 10px #fff;
 
-      }
-
-      .jumbotron p{
-        margin-left: 32%;
-        margin-top: 5%;
-        font-size: 2em;
-        text-shadow: 10px #fff;
-
-      }
+#welcome-image{
+  background-image: url(../img/pexels-umbrellaphoto-large.jpg);
 
 
-
-
-.jumbotron .btn{
-  background-color: blue;
-  opacity: 0.6;
-  margin-left: 8%;
-  transform: rotate(-40deg);
-  border-top-left-radius: 45%;
-    border-bottom-left-radius: 45%;
-    border-bottom-right-radius: 45%;
-  height: 100px;
 }
+
+#cello-site{
+  background-image: url(../img/pexels-cellist.jpeg);
+
+}
+
+#travel-site{
+  background-image: url(../img/pexels-photo.jpg);
+
+}
+
+/*CAROUSEL ENDS*/
 
 
 #footer{
-  background: lightgray;
+  background: #cbd8e3;
   font-family: 'IM Fell Great Primer SC', serif;
   height: 175px;
-  margin-top: 120px;
+  margin-top: -1px;
 }
 
 #icon{
   border: 2px solid black;
   height: 175px;
+  text-align: center;
+  padding-top: 40px;
+  }
+
+  .fa-facebook-square:before, .fa-linkedin:before{
+    font-size: 4em;
+    text-shadow: 0.75px 0.75px 1px rgba(255, 255, 255, 0.8);
+    padding-left: 10px;
+
 
   }
-    #Facebook{
-      height: 50px;
-      color: blue;
-    }
+
+  .fa-facebook-square:before{
+    color: #3B5998;
+  }
+
+  .fa-linkedin:before{
+    color: #0177B5;
+  }
+
 
   #contact{
     border: 2px solid black;
