added restaurante site

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,16 @@
 
 }
 
+#restaurante{
+    background-image: url(../img/food_review.jpg);
+
+}
+
+#pet-store{
+    background-image: url(../img/hero.jpg);
+
+}
+
 /*CAROUSEL ENDS*/
 
 
