--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
 
 .item{
   height: 500px;
+  padding: none;
   background-position: center;
   background-size: cover;
 }
@@ -72,17 +73,17 @@
 
 /*CAROUSEL ENDS*/
 
+/*FOOTER BEGINS*/
 
-#footer{
-  background: #cbd8e3;
+.footer-column{
   font-family: 'IM Fell Great Primer SC', serif;
   height: 175px;
   margin-top: -1px;
+  background-color: #cbd8e3;
+  border: 2px solid black;
 }
 
 #icon{
-  border: 2px solid black;
-  height: 175px;
   text-align: center;
   padding-top: 40px;
 }
@@ -93,7 +94,7 @@
     padding-left: 25px;
   }
 
-  a{
+  #icon a{
     padding-left: 30px;
   }
 
@@ -103,25 +104,17 @@
 
   .fa-linkedin:before{
     color: #0177B5;
+    margin-left: -5px;
   }
 
 
-  #contact{
-    border: 2px solid black;
-    height: 175px;
-  }
+  /*Footer ends*/
 
-
-
-  #map{
-    border: 2px solid black;
-    height: 175px;
-
-  }
+  /*Responsive features begin*/
 
 @media (max-width: 768px) {
   #navbar .navbar-default{
-    background-color: #000;
+    background-color: #333;
     color: #fff;
   }
 
@@ -129,8 +122,13 @@
     height: 200px;
   }
   .carousel-font{
-    font-size: 2em;
+    padding-top: 4px;
+    font-size: 1em;
     margin-left: none;
+  }
+
+  .carousel-caption{
+    font-size: 0.5em;
   }
 
   .col-xs-12{
@@ -141,18 +139,24 @@
     visibility: hidden;
   }
 
-  #footer{
+  .footer-column{
     background-color: #000;
     color: #fff;
-    margin: 0.8px;
+    margin: 8px;
     height: inherit;
     width: inherit;
     padding: 20px;
       }
-  #icon{
-    padding: 2px;
-    height: 75px;
+  i.fa-facebook-square::before .fa-linkedin::before{
+    margin-right: 16px;
+    height: 32px;
+
   }
+
+  #icon .fa{
+  margin-left: -8px;
+  }
+
   #map{
     display: none;
     background-color: #000;
@@ -160,3 +164,4 @@
 
 
   }
+/*Responsive features end*/
