--- a/css/main.css
+++ b/css/main.css
@@ -122,14 +122,17 @@
     height: 200px;
   }
   .carousel-font{
-    padding-top: 4px;
-    font-size: 1em;
+    padding-top: 4em;
     margin-left: none;
   }
+.carousel-main-title{
+  font-size: 24px;
 
-  .carousel-caption{
-    font-size: 0.5em;
-  }
+}
+
+.carousel-subtitle{
+  font-size: 16px;
+}
 
   .col-xs-12{
     border: 20px;
